--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,8 @@
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
+    ],
+    "vercel": [
+        "php artisan migrate"
     ]
 }
