feat: change aartisan migrate

--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
             "@php artisan migrate --graceful --ansi"
         ],
         "vercel": [
-            "php artisan migrate"
+            "@php artisan migrate"
         ]
     },
     "extra": {
