--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "fakerphp/faker": "^1.23",
         "inertiajs/inertia-laravel": "^1.0",
+        "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
+        "laravel/pint": "^1.15",
+        "laravel/sail": "^1.29",
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.9",
-        "tightenco/ziggy": "^2.0"
-    },
-    "require-dev": {
-        "fakerphp/faker": "^1.23",
-        "laravel/breeze": "^2.0",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1",
-        "spatie/laravel-ignition": "^2.4"
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.1",
+        "spatie/laravel-ignition": "^2.5",
+        "tightenco/ziggy": "^2.0"
     },
     "autoload": {
         "psr-4": {
