--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
         "vue-tsc": "^1.8.27"
     },
     "dependencies": {
-        "npm-watch": "^0.11.0"
+        "@tsparticles/vue3": "^3.0.1",
+        "npm-watch": "^0.11.0",
+        "sweetalert2": "^11.11.0",
+        "tsparticles": "^3.4.0",
+        "vue-confetti": "^2.3.0",
+        "vue-confetti-explosion": "^1.0.2"
     }
 }
